[gd_scene load_steps=11 format=2]

[ext_resource path="res://resources/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/levels/001-grandma/bg_my_room.png" type="Texture" id=2]
[ext_resource path="res://assets/levels/001-grandma/fg_grandma.png" type="Texture" id=3]
[ext_resource path="res://scenes/story_dialog/story_dialog.gd" type="Script" id=4]
[ext_resource path="res://scenes/terminal_label/terminal_label.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/story_dialog/story_title.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=2]
resource_name = "message_end"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/TopControl/ActorTextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 158 ), Vector2( 400, 158 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/TopControl/BackgroundTextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.352941 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "message_start"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/TopControl/ActorTextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 400, 158 ), Vector2( 160, 158 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/TopControl/BackgroundTextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.352941 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "title_end"
tracks/0/type = "value"
tracks/0/path = NodePath("StoryTitle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StoryTitle:label_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "title_start"
tracks/0/type = "value"
tracks/0/path = NodePath("StoryTitle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StoryTitle:label_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="StoryDialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopControl" type="Control" parent="VBoxContainer"]
margin_right = 360.0
margin_bottom = 358.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackgroundTextureRect" type="TextureRect" parent="VBoxContainer/TopControl"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0.352941 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="ActorTextureRect" type="TextureRect" parent="VBoxContainer/TopControl"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -200.0
margin_right = 0.00219727
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="DialogControl" type="Control" parent="VBoxContainer"]
margin_top = 362.0
margin_right = 360.0
margin_bottom = 720.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="VBoxContainer/DialogControl"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/DialogControl/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = 76.0
margin_right = -48.0
margin_bottom = -48.0
mouse_filter = 1

[node name="StoryTextLabel" parent="VBoxContainer/DialogControl/Panel/MarginContainer" instance=ExtResource( 5 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 264.0
margin_bottom = 234.0
size_flags_vertical = 7
text = "My phone buzzed with a familiar ringtone."

[node name="StoryTitle" parent="." instance=ExtResource( 6 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/message_end = SubResource( 2 )
anims/message_start = SubResource( 1 )
anims/title_end = SubResource( 4 )
anims/title_start = SubResource( 3 )

[connection signal="gui_input" from="." to="." method="_on_StoryDialog_gui_input"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
